force-app/main/default/objects/Partnership_Interest__c/Partnership_Interest__c.object-meta.xml
<CustomObject>
    <label>Product Upsell</label>
    <nameField>
        <displayFormat>PTNR{00000000}</displayFormat>
        <label>Partnership Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Upsell</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>