force-app/main/default/objects/Partnership_Interest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Upsell</relationshipLabel>
    <relationshipName>Partnership_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>