force-app/main/default/objects/Partnership_Interest__c/fields/Accounting_Partner__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Partner__c</fullName>
    <description>Accounting partners to whom product upsell information will be shared</description>
    <label>Accounting Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bench</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>