force-app/main/default/objects/Partnership_Interest__c/fields/Ardius__c.field-meta.xml
<CustomField>
    <fullName>Ardius__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ardius</label>
    <type>Checkbox</type>
</CustomField>