force-app/main/default/objects/Partnership_Interest__c/fields/Employee_Retention_Credits__c.field-meta.xml
<CustomField>
    <fullName>Employee_Retention_Credits__c</fullName>
    <description>Used to capture if a customer is interested in Employee Retention Credits opportunities</description>
    <label>Employee Retention Credits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Upsell</valueSetName>
    </valueSet>
</CustomField>