force-app/main/default/objects/Partnership_Interest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product Upsell</relationshipLabel>
    <relationshipName>Product_Upsell</relationshipName>
    <type>Lookup</type>
</CustomField>