force-app/main/default/objects/Partnership_Interest__c/fields/Partner_Policy_Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Policy_Purchased_Date__c</fullName>
    <description>Policy purchase date received from external partners.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Partner Policy Purchased Date</label>
    <type>Date</type>
</CustomField>