force-app/main/default/objects/Partnership_Interest__c/fields/Partner_Policy_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Policy_Renewal_Date__c</fullName>
    <description>Policy renewal date received from external partners.</description>
    <label>Partner Policy Renewal Date</label>
    <type>Date</type>
</CustomField>