force-app/main/default/objects/Partnership_Interest__c/fields/Point_Of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Point_Of_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Point Of Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Product Upsell (Point Of Contact)</relationshipLabel>
    <relationshipName>Product_Upsell1</relationshipName>
    <type>Lookup</type>
</CustomField>