force-app/main/default/objects/Partnership_Interest__c/fields/State_Tax_Compliance_Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>State_Tax_Compliance_Interest_Type__c</fullName>
    <description>Compliance vendor</description>
    <label>State Tax Compliance Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mosey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>