force-app/main/default/objects/Partnership_Interest__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This information represents that options are selected by user to generate product upsell record.</description>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>Worker&apos;s Comp</fullName>
            </value>
            <value>
                <fullName>Tax Credits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>