force-app/main/default/objects/Partnership_Interest__c/fields/Upsell_Conversation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Conversation_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Upsell Conversation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>