force-app/main/default/objects/Partnership_Interest__c/fields/Upsell_Tier__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Tier__c</fullName>
    <label>Upsell Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Contractor Only</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Legacy Premium</fullName>
            </value>
            <value>
                <fullName>Premium CRB</fullName>
            </value>
            <value>
                <fullName>Premium Multi-EIN</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Plus with Priority Support</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>