force-app/main/default/objects/Partnership_Interest__c/fields/Workers_Comp_InterestPicklist__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_InterestPicklist__c</fullName>
    <label>Workers Comp Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Upsell</valueSetName>
    </valueSet>
</CustomField>