force-app/main/default/objects/Partnership_Interest__c/fields/Workers_Comp_Notes__c.field-meta.xml
<CustomField>
    <fullName>Workers_Comp_Notes__c</fullName>
    <inlineHelpText>Notes to pass to the selected external vendor(s).</inlineHelpText>
    <label>Workers&apos; Comp Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>