force-app/main/default/objects/Partnership_Interest__c/fields/X401K_Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>X401K_Interest_Type__c</fullName>
    <description>Multiselect options to create product upsell for all 401K vendors in one go.</description>
    <label>401K Interest Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Upsell</valueSetName>
    </valueSet>
</CustomField>