force-app/main/default/objects/Partnership_Interest__c/fields/X401k_Notes__c.field-meta.xml
<CustomField>
    <fullName>X401k_Notes__c</fullName>
    <inlineHelpText>Notes to pass to the selected external vendor(s).</inlineHelpText>
    <label>401k Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>