force-app/main/default/objects/Partnership_Interest__c/fields/X529_Notes__c.field-meta.xml
<CustomField>
    <fullName>X529_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>529 Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>