force-app/main/default/objects/Partnership_Interest__c/recordTypes/Care_Upsell.recordType-meta.xml
<RecordType>
    <fullName>Care_Upsell</fullName>
    <active>true</active>
    <label>Care Upsell</label>
</RecordType>