force-app/main/default/objects/Partnership_Interest__c/recordTypes/Customer_Success.recordType-meta.xml
<RecordType>
    <fullName>Customer_Success</fullName>
    <active>true</active>
    <label>Customer Success</label>
</RecordType>