force-app/main/default/objects/Partnership_Interest__c/recordTypes/Fulfillment_Upsell.recordType-meta.xml
<RecordType>
    <fullName>Fulfillment_Upsell</fullName>
    <active>true</active>
    <description>This recordtype is used by advising and renewal teams for fulfillment upsell</description>
    <label>Fulfillment Upsell</label>
</RecordType>