force-app/main/default/objects/Partnership_Interest__c/recordTypes/New_Partnership_Interest.recordType-meta.xml
<RecordType>
    <fullName>New_Partnership_Interest</fullName>
    <active>true</active>
    <label>New Partnership Interest</label>
</RecordType>