force-app/main/default/objects/Partnership_Interest__c/validationRules/Require_529_Notes_for_529_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_529_Notes_for_529_Email</fullName>
    <active>true</active>
    <errorConditionFormula>X529_Interest__c = true &amp;&amp; ISBLANK(X529_Notes__c)</errorConditionFormula>
    <errorDisplayField>X529_Notes__c</errorDisplayField>
    <errorMessage>529 Notes are required to send an email with 529 Interest.</errorMessage>
</ValidationRule>