force-app/main/default/objects/Partnership_Interest__c/validationRules/Require_Contact_for_401K_selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Contact_for_401K_selection</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.Name =&apos;Fulfillment Upsell&apos;, ISBLANK( Contact__c ), X401k_Interest__c  )</errorConditionFormula>
    <errorDisplayField>X401k_Interest__c</errorDisplayField>
    <errorMessage>Please chose contact from the Company before selecting the 401K Checkbox. Contact is required if email has to be sent to Guideline</errorMessage>
</ValidationRule>