force-app/main/default/objects/Partnership_Interest__c/validationRules/Require_WC_Notes_for_WC_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_WC_Notes_for_WC_Email</fullName>
    <active>false</active>
    <errorConditionFormula>Workers_Comp_Interest__c = true &amp;&amp; ISBLANK(Workers_Comp_Notes__c)</errorConditionFormula>
    <errorDisplayField>Workers_Comp_Notes__c</errorDisplayField>
    <errorMessage>Workers Comp Notes are required to send an email with Workers&apos; Comp Interest.</errorMessage>
</ValidationRule>